--- a/css/global.css
+++ b/css/global.css
@@ -3,7 +3,7 @@ img{width: 100%;}
 
 
 /* 컨텐츠 사이즈 - padding */
-.mainContentSize{padding-inline: max(calc((100% - 1400px) / 2), 15px); box-sizing: border-box;}
+.mainContentSize{padding-inline: max(calc((100% - 1400px) / 2), var(--spacing)); box-sizing: border-box;}
 
 
 /* 포인트 색상 */
@@ -20,11 +20,24 @@ mark.point02{color: var(--color-point02);}
 
 
 /* 사이드 메뉴 */
-aside{position: fixed; right: 40px; height: 100%; display: flex; flex-direction: column; justify-content: center;}
+aside{position: fixed; right: 40px; height: 100%; display: flex; flex-direction: column; justify-content: center; z-index: 1;}
 aside a{font-size: 16px; line-height: 22px; width: 140px; padding-block: 40px; color: white; aspect-ratio: 1; background-color: #FF6760; border: 5px solid white; border-radius: 100%; display: flex; flex-direction: column; align-items: center; box-sizing: border-box; position: relative;}
 aside a::after{content: ''; width: 30px; aspect-ratio: 1; position: absolute; left: 50%; bottom: 15px; transform: translateX(-50%); background: url(../images/icon-go.png) no-repeat center / cover;}
 aside a:not(:last-child){margin-bottom: 20px;}
 aside a strong{font-weight: 700;}
+
+
+/* 서버 페이지 공통 */
+[class*="Page"] > .contentsBox{max-width: 1200px; width: calc(100% - (var(--spacing) * 2)); text-align: center; margin-inline: auto;}
+[class*="Page"] > .contentsBox h2{font-size: 40px; font-weight: 700; color: var(--color-point01);}
+[class*="Page"] > footer{margin-top: 200px;}
+.topBox p:first-of-type{font-size: 50px; line-height: 66px; font-weight: 200;}
+.topBox p:first-of-type strong{font-weight: 600;}
+/* 회사소게, 사업안내 공통 */
+:is(.aboutAsPage, .businessPage) section h2 + p{font-size: 24px; line-height: 34px; margin-top: 30px; font-weight: 200;}
+:is(.aboutAsPage, .businessPage) section h2 + p b{font-weight: 500;}
+/* 회사소게 공통 */
+.aboutAsPage section:not(:last-of-type){margin-bottom: 200px;}
 
 
 /* 해더 */
