--- a/css/global.css
+++ b/css/global.css
@@ -31,7 +31,7 @@ aside a strong{font-weight: 700;}
 
 /* 버튼 */
 [class*="btn-"]{width: 264px; font-size: 20px; font-weight: 700; text-align: center;}
-.btn-bg{line-height: 70px; color: white; background-color: var(--color-point01);}
+.btn-bg{line-height: 70px; color: white; background-color: var(--color-point01); border: none;}
 .btn-border{line-height: 68px; color: var(--color-point01); border: 1px solid var(--color-point01); box-sizing: border-box;}
 .btnBox{gap: 30px; margin-top: 100px; display: flex; justify-content: center; align-items: center;}
 .btnBox [class*="btn-"]{width: 230px;}
@@ -54,6 +54,25 @@ aside a strong{font-weight: 700;}
 .paginationBox ol li.active a{font-weight: 800; text-decoration: underline; text-decoration-thickness: 2px; text-underline-offset: 2px;}
 
 
+/* 입력 폼 */
+.inputBox label{cursor: pointer;}
+.inputBox ul{margin-bottom: 40px; display: flex; flex-wrap: wrap; justify-content: space-between;}
+.inputBox ul li:not([class]){width: 46.667%;}
+.inputBox ul li.full{width: 100%;}
+.inputBox ul li:not(:last-child){margin-bottom: 40px;}
+.inputBox ul li > label:first-child{font-size: 16px; margin-bottom: 12px; font-weight: 700; display: flex; align-items: start;}
+.inputBox ul li:has(:required) > label:first-child::after{content: '*'; color: var(--color-point02);}
+.inputBox ul li div :is(input, textarea){padding: 20px; width: 100%; border: 1px solid var(--color-line01); box-sizing: border-box;}
+.inputBox ul li div :is(input, textarea)::placeholder{color: var(--color-font04);}
+.inputBox ul li div input{height: 60px;}
+.inputBox ul li div textarea{height: 300px;}
+.inputBox input[type="checkbox"] + label{font-size: 16px; display: flex; align-items: center;}
+.inputBox input[type="checkbox"] + label::before{content: ''; width: 22px; aspect-ratio: 1; --styleIdx: 0; background: url(../images/icon-checkbox.png) no-repeat center top calc(100% * var(--styleIdx)) / cover;}
+.inputBox input[type="checkbox"] + label b{font-weight: 700;}
+.inputBox input[type="checkbox"]:checked + label::before{--styleIdx: 1;}
+.inputBox + input[type="submit"]{margin-top: 100px; display: block; margin-inline: auto;}
+
+
 /* 서버 페이지 공통 */
 [class*="Page"]:not(.mainPage){padding-top: var(--headerHeight);}
 [class*="Page"] > footer{margin-top: 200px;}
@@ -68,11 +87,13 @@ aside a strong{font-weight: 700;}
 /* 사업안내, 연계고용 공통 */
 :is(.businessPage, .employPage) .topBox{padding-block: 40px; display: flex; align-items: center; background-color: #F8FAFF;}
 :is(.businessPage, .employPage) .topBox::before{content: ''; width: 340px; aspect-ratio: 1; background-repeat: no-repeat; background-position: center; background-size: cover;}
+/* 연계고용, 문의하기 공통 */
+:is(.employPage, .inquiryPage) section h2 + p{font-size: 18px; line-height: 24px; margin-top: 30px; font-weight: 300; color: var(--color-font02);}
 /* 회사소개, 상세 공통 */
 :is(.aboutAsPage, .detailPage) .contentsBox{padding-top: 120px;}
 /* 소식, 문의 공통 */
-:is(.newsPage, .employPage) .contentsBox{padding-top: 100px;}
-:is(.newsPage, .employPage) .contentsBox section h2{font-size: 50px; font-weight: 700;}
+:is(.newsPage, .inquiryPage) .contentsBox{padding-top: 100px;}
+:is(.newsPage, .inquiryPage) .contentsBox section h2{font-size: 50px; font-weight: 700;}
 /* 회사소게 공통 */
 .aboutAsPage section:not(:last-of-type){margin-bottom: 200px;}
 
