--- a/css/page.css
+++ b/css/page.css
@@ -96,3 +96,7 @@
 .detailPage .contentsBox > section .contentArea p:not(:last-of-type){margin-bottom: 26px;}
 .detailPage .contentsBox > section section{margin-top: 160px;}
 .detailPage .contentsBox > section section h3{font-size: 28px; margin-bottom: 40px; font-weight: 700;}
+
+
+/* 문의 */
+.inquiryPage .contentsBox section h2 + p{margin-bottom: 80px;}
