--- a/css/global.css
+++ b/css/global.css
@@ -34,7 +34,7 @@ aside a strong{font-weight: 700;}
 .btn-bg{line-height: 70px; color: white; background-color: var(--color-point01); border: none;}
 .btn-border{line-height: 68px; color: var(--color-point01); border: 1px solid var(--color-point01); box-sizing: border-box;}
 .btnBox{gap: 30px; margin-top: 100px; display: flex; justify-content: center; align-items: center;}
-.btnBox [class*="btn-"]{width: 230px;}
+.btnBox [class*="btn-"], input[type="submit"]{width: 230px;}
 
 
 /* 게시판 공통 */
@@ -67,7 +67,7 @@ aside a strong{font-weight: 700;}
 .inputBox ul li div input{height: 60px;}
 .inputBox ul li div textarea{height: 300px;}
 .inputBox input[type="checkbox"] + label{font-size: 16px; display: flex; align-items: center;}
-.inputBox input[type="checkbox"] + label::before{content: ''; width: 22px; aspect-ratio: 1; --styleIdx: 0; background: url(../images/icon-checkbox.png) no-repeat center top calc(100% * var(--styleIdx)) / cover;}
+.inputBox input[type="checkbox"] + label::before{content: ''; width: 22px; margin-right: 10px; aspect-ratio: 1; --styleIdx: 0; background: url(../images/icon-checkbox.png) no-repeat center top calc(100% * var(--styleIdx)) / cover;}
 .inputBox input[type="checkbox"] + label b{font-weight: 700;}
 .inputBox input[type="checkbox"]:checked + label::before{--styleIdx: 1;}
 .inputBox + input[type="submit"]{margin-top: 100px; display: block; margin-inline: auto;}
@@ -79,16 +79,18 @@ aside a strong{font-weight: 700;}
 .topBox p:first-of-type{font-size: 50px; line-height: 66px; font-weight: 200;}
 .topBox p:first-of-type strong{font-weight: 600;}
 /* 회사소게, 사업안내, 사업안내, 연계고용 공통 */
-:is(.aboutAsPage, .businessPage, .businessPage, .employPage) > .contentsBox{text-align: center;}
-:is(.aboutAsPage, .businessPage, .businessPage, .employPage) > .contentsBox h2{font-size: 40px; font-weight: 700; color: var(--color-point01);}
+:is(.aboutAsPage, .businessPage, .businessPage, [class*="employ"][class*="Page"]) > .contentsBox{text-align: center;}
+:is(.aboutAsPage, .businessPage, .businessPage, [class*="employ"][class*="Page"]) > .contentsBox h2{font-size: 40px; font-weight: 700; color: var(--color-point01);}
 /* 회사소게, 사업안내 공통 */
 :is(.aboutAsPage, .businessPage) section h2 + p{font-size: 24px; line-height: 34px; margin-top: 30px; font-weight: 200;}
 :is(.aboutAsPage, .businessPage) section h2 + p b{font-weight: 500;}
 /* 사업안내, 연계고용 공통 */
-:is(.businessPage, .employPage) .topBox{padding-block: 40px; display: flex; align-items: center; background-color: #F8FAFF;}
-:is(.businessPage, .employPage) .topBox::before{content: ''; width: 340px; aspect-ratio: 1; background-repeat: no-repeat; background-position: center; background-size: cover;}
+:is(.businessPage, [class*="employ"][class*="Page"]) .topBox{padding-block: 40px; display: flex; align-items: center; background-color: #F8FAFF;}
+:is(.businessPage, [class*="employ"][class*="Page"]) .topBox::before{content: ''; width: 340px; aspect-ratio: 1; background-repeat: no-repeat; background-position: center; background-size: cover;}
 /* 연계고용, 문의하기 공통 */
-:is(.employPage, .inquiryPage) section h2 + p{font-size: 18px; line-height: 24px; margin-top: 30px; font-weight: 300; color: var(--color-font02);}
+:is([class*="employ"][class*="Page"], .inquiryPage) section h2 + p,
+.employPolicyPage section p{font-size: 18px; line-height: 24px; font-weight: 300;}
+:is([class*="employ"][class*="Page"], .inquiryPage) section h2 + p{margin-top: 30px;}
 /* 회사소개, 상세 공통 */
 :is(.aboutAsPage, .detailPage) .contentsBox{padding-top: 120px;}
 /* 소식, 문의 공통 */
