--- a/css/page.css
+++ b/css/page.css
@@ -82,18 +82,20 @@
 .businessPage .contentsBox .partnersArea ul li:nth-child(n + 4){margin-top: 5%;}
 
 
-/* 산업안내 */
+/* 연계고용 */
 [class*="employ"][class*="Page"] .topBox{margin-bottom: 60px;}
 [class*="employ"][class*="Page"] .topBox::before{margin-right: 60px; background-image: url(../images/icon-employ.png);}
 [class*="employ"][class*="Page"] .tabArea{max-width: 906px; margin-bottom: 120px; margin-inline: auto; display: flex; background-color: #DDE7FE; border-radius: 100px;}
 [class*="employ"][class*="Page"] .tabArea li{flex: 1;}
 [class*="employ"][class*="Page"] .tabArea li a{font-size: 20px; line-height: 60px; font-weight: 600; display: block; text-align: center; color: var(--color-point01);}
 [class*="employ"][class*="Page"] .tabArea li.active a{background-color: var(--color-point01); color: white; border-radius: 100px;}
+[class*="employ"][class*="Page"] .contentsBox section section{margin-top: 120px;}
+[class*="employ"][class*="Page"] .contentsBox section section h3{font-size: 28px; font-weight: 700;}
+[class*="employ"][class*="Page"] .contentsBox section > a{margin-top: 120px;}
 
-/* 산업안내 - 감면제도란? */
+/* 연계고용 - 감면제도란? */
 .employPolicyPage .contentsBox section > small{font-size: 17px; margin-top: 20px; display: block; font-weight: 300; color: var(--color-font03);}
-.employPolicyPage .contentsBox section section{margin-top: 120px;}
-.employPolicyPage .contentsBox section section h3{font-size: 28px; margin-bottom: 20px; font-weight: 700;}
+.employPolicyPage .contentsBox section section h3{margin-bottom: 20px;}
 .employPolicyPage .contentsBox section section h3 + p{margin-bottom: 40px;}
 .employPolicyPage .contentsBox section section div{background-color: var(--color-face02);}
 .employPolicyPage .contentsBox section section div ul{display: flex; justify-content: center;}
@@ -116,13 +118,13 @@
 .employPolicyPage .contentsBox section .detailArea div dl dd:not(:last-of-type){border-bottom: 3px solid #B7CDFF; padding-bottom: 10px; margin-bottom: 10px;}
 .employPolicyPage .contentsBox section .detailArea p:not(:first-child){color: var(--color-font02);}
 .employPolicyPage .contentsBox section .detailArea p:not(:first-child):not(:last-of-type){margin-bottom: 30px;}
-.employPolicyPage .contentsBox section > a{margin-top: 120px;}
 
-/* 산업안내 - 감면 절차 */
-.employProcedurePage .contentsBox section > p{margin-bottom: 80px;}
+/* 연계고용 - 감면 절차 */
+:is(.employProcedurePage, .employCalculatorPage) .contentsBox > section > p{margin-bottom: 80px;}
 .employProcedurePage .contentsBox section ol{font-size: 16px; font-weight: 300; text-align: left;}
 .employProcedurePage .contentsBox section ol > li{padding-left: 56px; display: flex; flex-wrap: wrap; column-gap: 20px; counter-increment: employProcedure; position: relative;}
-.employProcedurePage .contentsBox section ol > li::before{font-size: 18px; content: counter(employProcedure); position: absolute; left: 0; top: 0; width: 36px; aspect-ratio: 1; font-weight: 700; color: white; background-color: #89B4FD; border-radius: 100%; display: flex; justify-content: center; align-items: center;}
+.employProcedurePage .contentsBox section ol > li::before{font-size: 18px; content: counter(employProcedure); position: absolute; left: 0; top: 0; width: 36px; aspect-ratio: 1; font-weight: 700; color: white; background-color: #89B4FD; border-radius: 100%; display: flex; justify-content: center; align-items: center; z-index: 1;}
+.employProcedurePage .contentsBox section ol > li:not(:last-child):after{content: ''; position: absolute; left: 18px; top: 0; width: 1px; height: 100%; transform: translateX(-50%); background-color: var(--color-line01);}
 .employProcedurePage .contentsBox section ol > li:not(:last-child){line-height: 28px; padding-bottom: 80px;}
 .employProcedurePage .contentsBox section ol > li:last-child{line-height: 24px;}
 .employProcedurePage .contentsBox section ol > li mark{font-weight: 600;}
@@ -134,6 +136,64 @@
 .employProcedurePage .contentsBox section ol > li div:nth-of-type(2) mark{display: block;}
 .employProcedurePage .contentsBox section ol > li div:nth-of-type(2) b{margin-top: 20px; display: block; font-weight: 600;}
 
+/* 연계고용 - 계산기 */
+.employCalculatorPage .contentsBox > section > ul{display: flex;}
+.employCalculatorPage .contentsBox > section > ul li:first-child{flex: 280;}
+.employCalculatorPage .contentsBox > section > ul li:not(:first-child){flex: 200;}
+.employCalculatorPage .contentsBox > section > ul li:first-child > *{padding-left: 20px;}
+.employCalculatorPage .contentsBox > section > ul li:not(:first-child, :last-child) > *{padding-inline: 10px;}
+.employCalculatorPage .contentsBox > section > ul li:last-child > *{padding-right: 20px;}
+.employCalculatorPage .contentsBox > section > ul li > *{font-size: 18px; line-height: 21px; height: 80px; display: flex; justify-content: center; align-items: center;}
+.employCalculatorPage .contentsBox > section > ul li p{font-weight: 300; background-color: var(--color-face02); border-width: 1px 0; border-style: solid; border-color: black transparent var(--color-line02);}
+.employCalculatorPage .contentsBox > section > ul li div{font-weight: 600;}
+.employCalculatorPage .contentsBox > section > ul li div[data-unit]:after{content: attr(data-unit);}
+.employCalculatorPage .contentsBox > section > ul li div input{height: 50px; width: 100%; text-align: right; padding-right: 35px; box-sizing: border-box; border: 2px solid #2550B6;}
+.employCalculatorPage .contentsBox > section > ul li:has(input) div{position: relative;}
+.employCalculatorPage .contentsBox > section > ul li:has(input) div::after{position: absolute; right: 16px; top: 50%; transform: translateY(-50%);}
+.employCalculatorPage .contentsBox > section > div{padding: 30px; background-color: var(--color-face02); border-width: 1px 0; border-style: solid; border-color: var(--color-line02) transparent;}
+.employCalculatorPage .contentsBox > section > div > *{display: block;}
+.employCalculatorPage .contentsBox > section > div strong{font-size: 20px; margin-bottom: 20px; font-weight: 600;}
+.employCalculatorPage .contentsBox > section > div strong mark{font-size: 26px;}
+.employCalculatorPage .contentsBox > section > div small{font-size: 16px; line-height: 22px; font-weight: 300; color: var(--color-font02);}
+.employCalculatorPage .contentsBox section section h3{margin-bottom: 30px;}
+.employCalculatorPage .contentsBox section section > mark{font-size: 16px; margin-block: 7px 60px; font-weight: 300; display: block;}
+.employCalculatorPage .contentsBox section section > div{margin-bottom: 40px; gap: 10px; display: flex; justify-content: center; align-items: center;}
+.employCalculatorPage .contentsBox section section > div button{font-size: 16px; font-weight: 700; height: 50px; padding-inline: 30px; color: var(--color-point01); border: 2px solid var(--color-point01); border-radius: 30px; box-sizing: border-box;}
+.employCalculatorPage .contentsBox section section > div button.active{color: white; background-color: var(--color-point01); position: relative;}
+.employCalculatorPage .contentsBox section section > div button.active::after{border-width: 9px 7px 0 7px; border-style: solid; border-color: var(--color-point01) transparent transparent transparent; content: ''; position: absolute; left: 50%; bottom: 0; transform: translateX(-50%) translateY(100%);}
+.employCalculatorPage .contentsBox section section > :is(strong, span){font-size: 20px;}
+.employCalculatorPage .contentsBox section section > strong{font-weight: 600;}
+.employCalculatorPage .contentsBox section section > span{font-weight: 300; color: var(--color-font03);}
+.employCalculatorPage .contentsBox section section table{margin-top: 30px; border-width: 1px 0 0; border-style: solid; border-color: black transparent var(--color-line02);}
+.employCalculatorPage .contentsBox section section table thead{height: 100px;}
+.employCalculatorPage .contentsBox section section table :is(thead, tbody){font-size: 14px; line-height: 17px;}
+.employCalculatorPage .contentsBox section section table tr > *{vertical-align: middle; border-bottom: 1px solid var(--color-line02);}
+.employCalculatorPage .contentsBox section section table :is(thead, tbody) tr > *:not(:last-child){border-right: 1px solid var(--color-line02);}
+.employCalculatorPage .contentsBox section section table tr > *:nth-child(1){width: 50px;}
+.employCalculatorPage .contentsBox section section table tr > *:nth-child(2){width: 50px;}
+.employCalculatorPage .contentsBox section section table tr > *:nth-child(3){width: 90px;}
+.employCalculatorPage .contentsBox section section table tr > *:nth-child(4){width: 80px;}
+.employCalculatorPage .contentsBox section section table tr > *:nth-child(5){width: 90px;}
+.employCalculatorPage .contentsBox section section table tr > *:nth-child(6){width: 90px;}
+.employCalculatorPage .contentsBox section section table tr > *:nth-child(7){width: 90px;}
+.employCalculatorPage .contentsBox section section table tr > *:nth-child(8){width: 80px;}
+.employCalculatorPage .contentsBox section section table tr > *:nth-child(9){width: 80px;}
+.employCalculatorPage .contentsBox section section table tr > *:nth-child(10){width: 64px;}
+.employCalculatorPage .contentsBox section section table tr > *:nth-child(11){width: 64px;}
+.employCalculatorPage .contentsBox section section table tr > *:nth-child(12){width: 64px;}
+.employCalculatorPage .contentsBox section section table tr > *:nth-child(13){width: 64px;}
+.employCalculatorPage .contentsBox section section table tr > *:nth-child(14){width: 64px;}
+.employCalculatorPage .contentsBox section section table tr > *:nth-child(15){width: 90px;}
+.employCalculatorPage .contentsBox section section table tr > *:nth-child(16){width: 90px;}
+.employCalculatorPage .contentsBox section section table thead{background-color: var(--color-face02);}
+.employCalculatorPage .contentsBox section section table tbody tr > *{padding: 10px 5px;}
+.employCalculatorPage .contentsBox section section table tbody tr input[type="text"]{width: 100%; height: 30px; text-align: center; border: 1px solid var(--color-line02); box-sizing: border-box;}
+.employCalculatorPage .contentsBox section section table tbody tr input[type="checkbox"] + label{justify-content: center;}
+.employCalculatorPage .contentsBox section section table tfoot{background-color: var(--color-face02);}
+.employCalculatorPage .contentsBox section section table tfoot tr{height: 80px;}
+.employCalculatorPage .contentsBox section section table tfoot tr td{padding-inline: 30px;}
+.employCalculatorPage .contentsBox section section table tfoot tr td p{font-size: 18px; font-weight: 600; display: flex; justify-content: space-between;}
+.employCalculatorPage .contentsBox section section table tfoot tr td p span::after{content: '원';}
 
 
 /* 소식 */
