--- a/css/global.css
+++ b/css/global.css
@@ -14,7 +14,7 @@ mark.point02{color: var(--color-point02);}
 
 
 /* 언더라인 */
-.underLine{position: relative; text-decoration: underline; text-decoration-color: #DDE7FE; text-underline-offset: -5px; text-decoration-thickness: 15px; text-decoration-skip-ink: none;}
+.underLine{position: relative; text-decoration: underline; text-decoration-color: #DDE7FE; text-underline-offset: -5px; text-decoration-skip-ink: none;}
 
 
 /* 아이콘, 이미지 배경처리 */
@@ -22,10 +22,8 @@ mark.point02{color: var(--color-point02);}
 
 
 /* 사이드 메뉴 */
-aside{position: fixed; right: 40px; height: 100%; display: flex; flex-direction: column; justify-content: center; z-index: 1;}
-aside a{font-size: 16px; line-height: 22px; width: 140px; padding-block: 40px; color: white; aspect-ratio: 1; background-color: #FF6760; border: 5px solid white; border-radius: 100%; display: flex; flex-direction: column; align-items: center; box-sizing: border-box; position: relative;}
-aside a::after{content: ''; width: 30px; aspect-ratio: 1; position: absolute; left: 50%; bottom: 15px; transform: translateX(-50%); background: url(../images/icon-go.png) no-repeat center / cover;}
-aside a:not(:last-child){margin-bottom: 20px;}
+aside{position: fixed; display: flex; justify-content: center; z-index: 1;}
+aside a{color: white; display: flex; flex-direction: column; align-items: center; box-sizing: border-box; position: relative;}
 aside a strong{font-weight: 700;}
 
 
@@ -106,22 +104,15 @@ input[type="checkbox"]:checked + label::before{--styleIdx: 1;}
 
 /* 해더 */
 header{position: fixed; left: 0; top: 0; width: 100%; display: flex; justify-content: space-between; align-items: center; z-index: 100;}
-header h1{width: 94px;}
 header h1 a{aspect-ratio: 94 / 60; display: block; background-image: url(../images/logo.png);}
-header nav ul{display: flex; gap: 80px;}
-header nav ul li a{font-size: 20px; line-height: var(--headerHeight); font-weight: 700;}
-header nav ul li:last-child a{display: flex; align-items: center;}
-header nav ul li:last-child a::before{content: ''; width: 30px; aspect-ratio: 30 / 24; background: url(../images/icon-inquiry.png) no-repeat center / cover; margin-right: 5px;}
-header nav ul li.active a{text-decoration: underline; text-decoration-thickness: 3px; text-underline-offset: 10px;}
-header .iconBox{display: none;}
+header nav ul li a{display: flex; align-items: center; font-weight: 700;}
+header nav ul li:last-child a::before{content: ''; aspect-ratio: 30 / 24; background: url(../images/icon-inquiry.png) no-repeat center / cover; margin-right: 5px;}
 
 
 /* 푸터 */
-footer{padding-block: 80px; background-color: var(--color-face02); text-align: center;}
-footer img{max-width: 287px; margin-bottom: 30px;}
-footer address{font-size: 16px; line-height: 26px; max-width: 500px; font-weight: 300; color: var(--color-font02); display: flex; flex-wrap: wrap; justify-content: center; margin-inline: auto;}
+footer{background-color: var(--color-face02); text-align: center;}
+footer address{font-weight: 300; color: var(--color-font02); display: flex; flex-wrap: wrap; justify-content: center; margin-inline: auto;}
 footer address dl{display: flex; justify-content: center;}
 footer address dl:nth-child(1){width: 100%;}
-footer address :is(dl:nth-child(2), dl:nth-child(4))::after{content: '/'; margin-inline: 0.4em;}
 footer address dl dt{display: flex; align-items: center;}
 footer address dl dt::after{content: ':'; margin-inline: 0.4em;}
