--- a/css/import.css
+++ b/css/import.css
@@ -4,4 +4,8 @@
 @import url('reset.css');
 @import url('root.css');
 @import url('global.css');
+@import url('global_pc.css') screen and (950px <= width);
+@import url('global_mobile.css') screen and (width < 950px);
 @import url('page.css');
+@import url('page_pc.css') screen and (950px <= width);
+@import url('page_mobile.css') screen and (width < 950px);
