--- a/css/root.css
+++ b/css/root.css
@@ -10,5 +10,11 @@
     --color-face01: #f1f1f1;
     --color-face02: #f8f8f8;
     --spacing: 15px;
-    --headerHeight: 100px;
+}
+
+@media screen and (950px <= width) {
+    :root{--headerHeight: 100px;}
+}
+@media screen and (width < 950px) {
+    :root{--headerHeight: 58px;}
 }
