--- a/css/global_pc.css
+++ b/css/global_pc.css
@@ -1,3 +1,6 @@
+br.mobile{display: none;}
+
+
 /* 언더라인 */
 .underLine{text-decoration-thickness: 15px;}
 
@@ -7,6 +10,29 @@ aside{position: fixed; top: 0; right: 40px; height: 100%; flex-direction: column
 aside a{font-size: 16px; line-height: 22px; width: 140px; padding-block: 40px; aspect-ratio: 1; background-color: #FF6760; border-radius: 100%; border: 5px solid white;}
 aside a::after{content: ''; width: 30px; aspect-ratio: 1; position: absolute; left: 50%; bottom: 15px; transform: translateX(-50%); background: url(../images/icon-go.png) no-repeat center / cover;}
 aside a:not(:last-child){margin-bottom: 20px;}
+
+
+/* 버튼 */
+[class*="btn-"]{width: 264px; font-size: 20px;}
+.btn-bg{line-height: 70px;}
+
+
+/* 서버 페이지 공통 */
+[class*="Page"] > footer{margin-top: 200px;}
+.topBox p:first-of-type{font-size: 50px; line-height: 66px;}
+/* 회사소게, 사업안내, 사업안내, 연계고용 공통 */
+:is(.aboutAsPage, .businessPage, .businessPage, [class*="employ"][class*="Page"]) > .contentsBox h2{font-size: 40px;}
+/* 회사소게, 사업안내 공통 */
+:is(.aboutAsPage, .businessPage) section h2 + p{font-size: 24px; line-height: 34px; margin-top: 30px;}
+/* 사업안내, 연계고용 공통 */
+:is(.businessPage, [class*="employ"][class*="Page"]) .topBox{display: flex; align-items: center;}
+:is(.businessPage, [class*="employ"][class*="Page"]) .topBox::after{order: -1;}
+/* 연계고용, 문의하기 공통 */
+:is([class*="employ"][class*="Page"], .inquiryPage) section h2 + p,
+.employPolicyPage section p,
+.employCalculatorPage section section h3 + p{font-size: 18px; line-height: 24px;}
+/* 회사소게 공통 */
+.aboutAsPage section:not(:last-of-type){margin-bottom: 200px;}
 
 
 /* 해더 */
