--- a/css/page_pc.css
+++ b/css/page_pc.css
@@ -16,3 +16,128 @@
 .mainPage .paginationBox button:nth-of-type(2){margin-top: 33px;}
 .mainPage .paginationBox span{font-size: 24px;}
 .mainPage .paginationBox span:nth-of-type(1){padding-bottom: 12px; margin-bottom: 12px; font-weight: 700; border-bottom: 1px solid black;}
+
+
+/* 회사소개 */
+.aboutAsPage .contentsBox .topBox{margin-bottom: 180px;}
+.aboutAsPage .contentsBox .topBox::after{width: 380px; margin-top: 50px;}
+.aboutAsPage .contentsBox .topBox p:first-of-type{margin-bottom: 60px;}
+.aboutAsPage .contentsBox .topBox img{width: 358px; margin-bottom: 30px;}
+.aboutAsPage .contentsBox .topBox p:nth-of-type(2){font-size: 20px; line-height: 28px;}
+.aboutAsPage .contentsBox .historyArea h2{margin-bottom: 80px;}
+.aboutAsPage .contentsBox .historyArea ol{margin-block: 194px; display: inline-flex; width: 100%; background: linear-gradient(90deg, #DDE7FE 0%, #89B4FD 30%, #78A0ED 65%, #092361 100%);}
+.aboutAsPage .contentsBox .historyArea ol li{position: relative;}
+.aboutAsPage .contentsBox .historyArea ol li::before,
+.aboutAsPage .contentsBox .historyArea ol li::after{content: ''; position: absolute; right: 2px; width: 10px; height: 62%; background-color: white;}
+.aboutAsPage .contentsBox .historyArea ol li::before{top: -3px; transform: translateX(-105%) rotate(-27deg); transform-origin: top;}
+.aboutAsPage .contentsBox .historyArea ol li::after{bottom: -3px; transform: translateX(-105%) rotate(27deg); transform-origin: bottom;}
+.aboutAsPage .contentsBox .historyArea ol li:not(:nth-last-child(-n + 2)){flex: 140;}
+.aboutAsPage .contentsBox .historyArea ol li:nth-last-child(2){flex: 160;}
+.aboutAsPage .contentsBox .historyArea ol li:last-child{flex: 200;}
+.aboutAsPage .contentsBox .historyArea ol li:last-child::before{box-shadow: 9px 0px 0px 0px white;}
+.aboutAsPage .contentsBox .historyArea ol li:last-child::after{box-shadow: 9px 0px 0px 0px white;}
+.aboutAsPage .contentsBox .historyArea ol li span{font-size: 26px; line-height: 80px;}
+.aboutAsPage .contentsBox .historyArea ol li div{height: 184px; margin-left: 8px; padding-block: 10px; padding-left: 15px; border-left: 1px dotted var(--color-font03); position: absolute; left: 0; text-align: left; box-sizing: border-box;}
+.aboutAsPage .contentsBox .historyArea ol li div::after{left: 0; width: 15px; translate: -50%;}
+.aboutAsPage .contentsBox .historyArea ol li:not(:last-child) div{width: 200%;}
+.aboutAsPage .contentsBox .historyArea ol li:last-child div{width: 100%;}
+.aboutAsPage .contentsBox .historyArea ol li:nth-child(2n) div{top: -194px;}
+.aboutAsPage .contentsBox .historyArea ol li:nth-child(2n) div::after{bottom: 0; rotate: 180deg;}
+.aboutAsPage .contentsBox .historyArea ol li:nth-child(2n + 1) div{bottom: -194px; display: flex; flex-direction: column; justify-content: flex-end;}
+.aboutAsPage .contentsBox .historyArea ol li:nth-child(2n + 1) div::after{top: 0;}
+.aboutAsPage .contentsBox .historyArea ol li div p{font-size: 16px; line-height: 19px;}
+.aboutAsPage .contentsBox .historyArea ol li div p:not(:last-of-type){margin-bottom: 20px;}
+.aboutAsPage .contentsBox .certificationArea p{margin-bottom: 80px;}
+.aboutAsPage .contentsBox .certificationArea ul{padding: 20px 5% 40px 43.334%; position: relative;}
+.aboutAsPage .contentsBox .certificationArea ul li:first-child{position: absolute; left: 5%; top: 20px; width: 33.3334%;}
+.aboutAsPage .contentsBox .certificationArea ul li:not(:first-child){width: 29.0322%;}
+.aboutAsPage .contentsBox .certificationArea ul li:not(:first-child):nth-child(-n + 4){margin-bottom: 6.4516%;}
+.aboutAsPage .contentsBox .certificationArea > a{font-size: 18px; width: 350px; line-height: 60px; margin-top: 80px;}
+.aboutAsPage .contentsBox .contactArea > p{margin-bottom: 80px;}
+.aboutAsPage .contentsBox .contactArea ul{display: flex; margin-bottom: 80px;}
+.aboutAsPage .contentsBox .contactArea ul li{line-height: 26px;}
+.aboutAsPage .contentsBox .contactArea ul li b{font-size: 16px;}
+.aboutAsPage .contentsBox .contactArea ul li p{font-size: 18px;}
+.aboutAsPage .contentsBox .contactArea iframe{aspect-ratio: 1200 / 600;}
+
+
+/* 산업안내 */
+.businessPage .topBox{margin-bottom: 120px;}
+.businessPage .topBox::after{margin-inline: 120px 90px;}
+.businessPage .contentsBox .processArea{margin-bottom: 140px;}
+.businessPage .contentsBox .processArea ol{margin-top: 80px; display: flex; justify-content: space-between;}
+.businessPage .contentsBox .processArea ol li{width: 16.667%;}
+.businessPage .contentsBox .processArea ol li::before{padding: 10px 20px; font-size: 17px;}
+.businessPage .contentsBox .processArea ol li b{font-size: 18px; margin-bottom: 15px;}
+.businessPage .contentsBox .processArea ol li p{font-size: 16px; line-height: 20px; min-height: 40px;}
+.businessPage .contentsBox .partnersArea ul{margin-block: 80px 140px; display: flex; flex-wrap: wrap; justify-content: space-between;}
+.businessPage .contentsBox .partnersArea ul li{width: 31.667%; font-size: 18px; line-height: 28px;}
+.businessPage .contentsBox .partnersArea ul li:nth-child(n + 4){margin-top: 5%;}
+
+
+/* 연계고용 */
+[class*="employ"][class*="Page"] .topBox{margin-bottom: 60px;}
+[class*="employ"][class*="Page"] .topBox::after{margin-right: 60px;}
+[class*="employ"][class*="Page"] .tabArea{max-width: 906px; margin-bottom: 120px; border-radius: 100px;}
+[class*="employ"][class*="Page"] .tabArea li a{font-size: 20px; line-height: 60px;}
+[class*="employ"][class*="Page"] .tabArea li.active a{border-radius: 100px;}
+[class*="employ"][class*="Page"] .contentsBox section section{margin-top: 120px;}
+[class*="employ"][class*="Page"] .contentsBox section section h3{font-size: 28px;}
+[class*="employ"][class*="Page"] .contentsBox section > a{margin-top: 120px;}
+
+/* 연계고용 - 감면제도란? */
+.employPolicyPage .contentsBox section > small{font-size: 17px;}
+.employPolicyPage .contentsBox section section h3 + p{margin-bottom: 40px;}
+.employPolicyPage .contentsBox section section div ul{display: flex; justify-content: center;}
+.employPolicyPage .contentsBox section section div ul li{border-width: 7px;}
+.employPolicyPage .contentsBox section .standardArea div{padding-block: 50px;}
+.employPolicyPage .contentsBox section .standardArea div ul{margin-block: 40px;}
+.employPolicyPage .contentsBox section .standardArea div ul li{width: 260px; font-size: 16px; line-height: 24px;}
+.employPolicyPage .contentsBox section .detailArea div{padding-block: 80px; margin-bottom: 40px;}
+.employPolicyPage .contentsBox section .detailArea div ul li{width: 180px; font-size: 18px; line-height: 26px;}
+.employPolicyPage .contentsBox section .detailArea div ul li:first-child{margin-right: 7.8334%;}
+.employPolicyPage .contentsBox section .detailArea div ul li:first-child::after{width: 34px; right: -37px; top: 50%; transform: translateX(100%) translateY(-50%);}
+.employPolicyPage .contentsBox section .detailArea div ul li:not(:first-child, :last-child){margin-right: 6.667%;}
+.employPolicyPage .contentsBox section .detailArea div ul li:not(:first-child, :last-child)::after{width: 30px; right: -30px; top: 50%; transform: translateX(100%) translateY(-50%);}
+.employPolicyPage .contentsBox section .detailArea div dl{padding-left: 120px; font-size: 16px; margin-top: 60px;}
+.employPolicyPage .contentsBox section .detailArea div dl dt::after{width: 15px; margin-left: 15px;}
+.employPolicyPage .contentsBox section .detailArea div dl dd{padding-inline: 10px;}
+
+/* 연계고용 - 감면 절차 */
+:is(.employProcedurePage, .employCalculatorPage) .contentsBox > section > p{margin-bottom: 80px;}
+.employProcedurePage .contentsBox section ol{font-size: 16px;}
+.employProcedurePage .contentsBox section ol > li{padding-left: 56px; display: flex; flex-wrap: wrap; column-gap: 20px;}
+.employProcedurePage .contentsBox section ol > li::before{font-size: 18px; width: 36px;}
+.employProcedurePage .contentsBox section ol > li:not(:last-child){line-height: 28px;}
+.employProcedurePage .contentsBox section ol > li:not(:last-child):after{content: ''; position: absolute; left: 18px; top: 0; width: 1px; height: 100%; transform: translateX(-50%); background-color: var(--color-line01);}
+.employProcedurePage .contentsBox section ol > li:last-child{line-height: 24px;}
+.employProcedurePage .contentsBox section ol > li strong{font-size: 28px; line-height: 36px; margin-bottom: 30px; width: 100%;}
+.employProcedurePage .contentsBox section ol > li div{padding-inline: 25px;}
+.employProcedurePage .contentsBox section ol > li div:first-of-type{flex: 664;}
+.employProcedurePage .contentsBox section ol > li div:first-of-type p:not(:last-of-type){margin-bottom: 20px;}
+.employProcedurePage .contentsBox section ol > li div:nth-of-type(2){flex: 460;}
+.employProcedurePage .contentsBox section ol > li div:nth-of-type(2) b{margin-top: 20px;}
+
+/* 연계고용 - 계산기 */
+.employCalculatorPage .contentsBox > section > ul{display: flex;}
+.employCalculatorPage .contentsBox > section > ul li:first-child{flex: 280;}
+.employCalculatorPage .contentsBox > section > ul li:not(:first-child){flex: 200;}
+.employCalculatorPage .contentsBox > section > ul li:first-child > *{padding-inline: 20px 10px;}
+.employCalculatorPage .contentsBox > section > ul li:not(:first-child, :last-child) > *{padding-inline: 10px;}
+.employCalculatorPage .contentsBox > section > ul li:last-child > *{padding-inline: 10px 20px;}
+.employCalculatorPage .contentsBox > section > ul li > *{font-size: 18px; line-height: 21px; height: 80px;}
+.employCalculatorPage .contentsBox > section > ul li p{border-width: 0 0 1px 0;}
+.employCalculatorPage .contentsBox > section > ul li:has(input) div::after{right: 16px;}
+.employCalculatorPage .contentsBox > section > div{padding: 30px;}
+.employCalculatorPage .contentsBox > section > div strong{font-size: 20px; margin-bottom: 20px;}
+.employCalculatorPage .contentsBox > section > div strong mark{font-size: 26px;}
+.employCalculatorPage .contentsBox > section > div strong mark::after{font-size: 20px;}
+.employCalculatorPage .contentsBox > section > div small{font-size: 16px; line-height: 22px;}
+.employCalculatorPage .contentsBox section section h3{margin-bottom: 30px;}
+.employCalculatorPage .contentsBox section section > mark{font-size: 16px; margin-block: 7px 60px;}
+.employCalculatorPage .contentsBox section section > div button{font-size: 16px; height: 50px; padding-inline: 30px;}
+.employCalculatorPage .contentsBox section section > div button.active::after{border-width: 9px 7px 0 7px; border-style: solid; border-color: var(--color-point01) transparent transparent transparent; content: ''; position: absolute; left: 50%; bottom: 0; transform: translateX(-50%) translateY(100%);}
+.employCalculatorPage .contentsBox section section > :is(strong, span){font-size: 20px;}
+.employCalculatorPage .contentsBox section section .tableBottom{display: flex; align-items: center;}
+.employCalculatorPage .contentsBox section section .tableBottom p{font-size: 18px; padding-inline: 30px; display: flex; justify-content: space-between;}
+.employCalculatorPage .contentsBox section section .tableBottom p:not(:last-of-type){border-right: 2px solid black;}
